external/monitor/mimir/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir
  namespace: monitoring
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - mimir.mattgerega.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: mimir-gateway
          port: 80
          weight: 1
